Fix bytebuddy warning