@@ -55,3 +55,9 @@ signing {
     sign publishing.publications.mavenNatparse
 }
 
+tasks.named('test') {
+    jvmArgs = [
+            '-XX:+EnableDynamicAgentLoading',
+    ]
+    useJUnitPlatform()
+}
